--- a/index.html
+++ b/index.html
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         
         <!-- HERO SECTION -->
-        <div>
-            <h1>Visit Torshov</h1>
-            <h2>Enjoy culture and sports in this vibrant district close to the center of Oslo.</h2>
+        <div id="hero">
+            <h1>Visit Ibadan</h1>
+            <h2>The largest city in west africa by geographical area.</h2>
         </div>
         
         <!-- ACTIVITIES SECTION -->
-        <div>
-            <h3>Top three activities to do at Torshov</h3>
-            <img src="images/park.jpg">
-            <img src="images/theatre.jpg">
-            <img src="images/sports.jpg">
+        <div id="activities-sect">
+            <h3>Top three activities to do at Ibadan</h3>
+            <div id="activities-card">
+                <div class="card">
+                    <img src="images/park.jpg" class="card-img">
+                    <h4>University of Ibadan</h4>
+                    <p>The first university in the whole of Nigeria.</p>
+                </div>
+                <div class="card">
+                    <img src="images/theatre.jpg" class="card-img">
+                    <h4>NTA</h4>
+                    <p>The first Television Station in the whole Africa</p>
+                </div>
+                <div class="card">
+                    <img src="images/sports.jpg" class="card-img">
+                    <h4>Liberty Stadium</h4>
+                    <p>The first stadium in Africa</p>
+                </div>
+            </div>
         </div>
 
         <!-- GUIDE SECTION -->
-        <div>
-            <h3>Your guide</h3>
-            <p>"I have lived at Torshov for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
-            <h4>Per Harald Borgen</h4>
-            <img src="images/per.jpg">
+        <div class="guide">
+            <div>
+                <h3>Your guide</h3>
+                <p>"I have lived in Ibadan for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
+                <h4>Ibrahim Balogun Olalekan</h4>
+            </div>
+            <img src="images/per.jpg" id="guide-img">
         </div>
     </body>
 </html>
