Add final touch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
+        <title>Ibadan-My Hometown</title>
     </head>
     <body>
         
@@ -16,22 +17,22 @@
         
         <!-- ACTIVITIES SECTION -->
         <div id="activities-sect">
-            <h3>Top three activities to do at Ibadan</h3>
+            <h3>Top three places to visit in Ibadan</h3>
             <div id="activities-card">
                 <div class="card">
-                    <img src="images/park.jpg" class="card-img">
+                    <img src="images/ui.jpeg" class="card-img">
                     <h4>University of Ibadan</h4>
-                    <p>The first university in the whole of Nigeria.</p>
+                    <p>The First university in the whole of Nigeria.</p>
                 </div>
                 <div class="card">
-                    <img src="images/theatre.jpg" class="card-img">
+                    <img src="images/nta.jpeg" class="card-img">
                     <h4>NTA</h4>
-                    <p>The first Television Station in the whole Africa</p>
+                    <p>The First Television Station in the whole Africa</p>
                 </div>
                 <div class="card">
-                    <img src="images/sports.jpg" class="card-img">
-                    <h4>Liberty Stadium</h4>
-                    <p>The first stadium in Africa</p>
+                    <img src="images/cocoa-house.jpg" class="card-img">
+                    <h4>Cocoa House</h4>
+                    <p>The First Sky scraper in Africa</p>
                 </div>
             </div>
         </div>
@@ -43,7 +44,7 @@
                 <p>"I have lived in Ibadan for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
                 <h4>Ibrahim Balogun Olalekan</h4>
             </div>
-            <img src="images/per.jpg" id="guide-img">
+            <img src="images/guide.png" id="guide-img">
         </div>
     </body>
 </html>
